actually fixed overflow

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html{
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  overflow-x: hidden !important;
+  /* overflow-x: hidden; */
 }
 
 body{
